update history data